--- a/contact.html
+++ b/contact.html
@@ -1,36 +1,5 @@
-<!--
-    For my chosen elements, I picked fieldset,label, and input. And the attributes I picked are required, name, and value.
 
-    This will be the page I actually implement them. I'm thinking the best way -- that makes sense for this mock site-- to
-    use these input elements is to build a dedicated contact page. And by contact page, I really mean a 'join my mailing list'
-    dedicated page. 
-
-    Similar to the other pages, I want it to be ultra simple, clean, and elegant. I'm thinking of a big white page with no 
-    pictures and no colors. It will be purely black text. In big text, it will say join our mailing list. 
-
-    This will be inpsiration: 
-    https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSU0b8gPZLh0sXXI9axLhaa1Vu0vMKJdlWKl1z30uSksdeHYs2qQ91UR_ibN-4EdA20cKg&usqp=CAU
-    https://s3.amazonaws.com/neverbounce-hosted/images/blog/7-newsletter-form-examples/Kate-Spade-1-25-19.jpg   
-
-    
-    Also, hopefully since I did five pages instead of four, I can get away with the lack of scrolling on this specific page. 
-
-    I also just want this page to have a text box for email and a submit button. 
-    -----
-    EXECUTION
-
-    I changed my mind. I wanted to invert the colors. In actors.html, entrep.html, and singers.html, I used a white background
-    with red text. For the Contact page, I want white text with red background. That didn't work out because I messed with the filters
-    so I just did a specific shade of red. I was aiming for a really light hue of red so its nearly white, but the color 
-    looks nice so I kept it. 
-
-    Also, by doing this, we can scroll which is good. Also, unlike that Kate Spade link above, mine actually looks like
-    it was filled with effort. (link for my color picker: https://htmlcolorcodes.com/) Also, the shade of red looks pretty
-    close to the text-color of the h1s in the other pages. I'm satisfied with how that looks
-
-
--->
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
     <head>
         <meta charset="UTF-8">
