fixed content 	modified:   actors.html

--- a/actors.html
+++ b/actors.html
@@ -1,27 +1,3 @@
-<!--
-    The prompt was "The purpose of this lab is to create a personal site about one of your interests. 
-    Examples include but are not limited to: favorite movie, show, book, artist, band, genre, sport, +
-    team,person, place to visit,"
-    
-    It was originally going to be about Elon Musk, but then I got carried away with making the logo for 'The Profiler'
-    and making the nav bar. And also, there's only so much information about Elon Musk. So, I'm going to claim
-    that this personal website is about my favorite actors, my favorite entrapreneurs, and my favorite singers-- or 
-    generally my favorite celebrities. 
-    
-    Also, since I'm steering in this new direction, i'm going to put information about why I like them in the
-    actor.html, entrepreneur.html and singers.html-- and it doesn't quite make sense since I already made a dedicated elon musk
-    page. But I like how pretty all the pages look so I'm going to run with it. 
-
-    ----------------------This will be the fourth page I am working on. ----------------------------------------------------------------------
-
-    If you skipped the Entpreneur and Singer pages, I basically said I want this page (actors.html) to look different. If I follow
-    that general celeb name, picture, and description format(that I used in those aforementioned pages), 
-    it will look like I didn't put a lot of effort. I'm going to try to make it different, but I will be subtle about it.
-
-
-
--->
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -48,7 +24,7 @@
         <div class = "welcome-page"> 
             <div class="welcome-info-general">
                 <h1>Actor Profiles</h1>
-                <p> Highlighting the biggest names in television and film that Kyle adores</p>
+                <p> Highlighting the biggest names in television and film</p>
             </div>
         </div>
         <img class="welcome-banner" src="https://cdn.vox-cdn.com/thumbor/cL__CME3-0qyELqPP11joM54F0Q=/0x0:3000x2000/1200x800/filters:focal(1239x602:1719x1082)/cdn.vox-cdn.com/uploads/chorus_image/image/63116134/OscarsWinnersLosers_Getty_SonyPicturesEntertainment_Marvel_Ringer.0.jpg">
