--- a/entrepreneurs.html
+++ b/entrepreneurs.html
@@ -1,14 +1,4 @@
-<!-- 
-    This is the third page I made. 
-    
-    I wish it could be longer but I don't really keep up with a lot of entrepreneurs. 
 
-    I had to make this category of celebrities because Elon Musk -- which is the first page I made -- does not
-    belong to the actor or singer category. And after writing this, I made Elon Musk's name clickable so it can direct
-    you to the elon musk page.
-
-
--->
 <!DOCTYPE html>
 <html>
     <head>
@@ -35,7 +25,7 @@
         <div class = "welcome-page"> 
             <div class="welcome-info-general">
                 <h1>Entrepreneur Profiles</h1>
-                <p> the wealthy business people that Kyle can't get enough of</p>
+                <p> The wealthy business people that we can't get enough of</p>
             </div>
         </div>
         <img class="welcome-banner" src="https://i.ytimg.com/vi/M__jI5JnAYc/maxresdefault.jpg">
